# AgenteIA---MIP

./: .env  .gitignore  DOCUMENTO_ENTREGABLE.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
AgenteMIP.egg-info/: PKG-INFO  SOURCES.txt
backend/src/: agent_service.py  agente.py  context_loader.py  ejecutor_mip.py  main.py  modelo_mip.py
backend/src/promts/: contexto.md
backend/src/providers/: __init__.py  base.py  deepseek_provider.py  gemini_provider.py  open_router_provider.py
data/: data.md
frontend/src/: GUI.py
tests/: test_agente.py  test_ejecutor.py  test_modelo_mip.py  testeos.md
