[tool.poetry]
name = "agentemip"
version = "0.1.0"
description = ""
authors = ["Jean"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
streamlit = "*"
google-genai = "*"
python-dotenv = "*"
openai = "^2.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"